Fixed bullet alignment on service page

--- a/assets/sass/organisms/_related-articles.scss
+++ b/assets/sass/organisms/_related-articles.scss
@@ -68,7 +68,7 @@
 // Breakpoints
 @media all and (min-width: $bp-medium-2) {
 
-	.bullet {
+	.related-articles .bullet {
 		display: inline-block;
 	}
 }
